# cron-gui

./: CMakeLists.txt  README.md  build_installer.bat  build_installer.ps1  cronjob.h  cronmanager.cpp  cronmanager.h  installer.iss  installer_welcome.txt  jobeditdialog.cpp  jobeditdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
